# nonebot-eval

./: Dockerfile  README.md  docker-compose.yml
eval/: .env.dev  README.md  pyproject.toml
