[project]
name = "eval"
version = "0.1.0"
description = "eval"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_exe_code"]
plugin_dirs = ["eval/plugins"]
builtin_plugins = []
